--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
